# rust-workshop

./: Cargo.toml  README.md  cheat_sheet.rs
aufgaben-1/: Cargo.toml  README.md
aufgaben-1/test1/: Cargo.toml
aufgaben-1/two-fer/tests/: two-fer.rs
aufgaben-2/caesar/: Cargo.toml  README.md
aufgaben-2/caesar/src/: lib.rs
aufgaben-2/mult_table/: Cargo.toml  README.md
aufgaben-2/mult_table/src/: lib.rs
aufgaben-2/smallest_elements/: Cargo.toml  README.md
aufgaben-2/smallest_elements/src/: lib.rs
cheat_sheet/: Cargo.toml  README.md
cheat_sheet/src/: main.rs
